; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_read_support_format_7zip.c_free_Folder.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/extr_archive_read_support_format_7zip.c_free_Folder.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._7z_folder = type { i32, %struct.TYPE_2__*, %struct.TYPE_2__*, %struct.TYPE_2__*, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.TYPE_2__* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct._7z_folder*)* @free_Folder to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_Folder(%struct._7z_folder* %0) #0 {
  %2 = alloca %struct._7z_folder*, align 8
  %3 = alloca i32, align 4
  store %struct._7z_folder* %0, %struct._7z_folder** %2, align 8
  %4 = load %struct._7z_folder*, %struct._7z_folder** %2, align 8
  %5 = getelementptr inbounds %struct._7z_folder, %struct._7z_folder* %4, i32 0, i32 4
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = icmp ne %struct.TYPE_2__* %6, null
  br i1 %7, label %8, label %33

8:                                                ; preds = %1
  store i32 0, i32* %3, align 4
  br label %9

9:                                                ; preds = %25, %8
  %10 = load i32, i32* %3, align 4
  %11 = load %struct._7z_folder*, %struct._7z_folder** %2, align 8
  %12 = getelementptr inbounds %struct._7z_folder, %struct._7z_folder* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = icmp ult i32 %10, %13
  br i1 %14, label %15, label %28

15:                                               ; preds = %9
  %16 = load %struct._7z_folder*, %struct._7z_folder** %2, align 8
  %17 = getelementptr inbounds %struct._7z_folder, %struct._7z_folder* %16, i32 0, i32 4
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = load i32, i32* %3, align 4
  %20 = zext i32 %19 to i64
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i64 %20
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = call i32 @free(%struct.TYPE_2__* %23)
  br label %25

25:                                               ; preds = %15
  %26 = load i32, i32* %3, align 4
  %27 = add i32 %26, 1
  store i32 %27, i32* %3, align 4
  br label %9

28:                                               ; preds = %9
  %29 = load %struct._7z_folder*, %struct._7z_folder** %2, align 8
  %30 = getelementptr inbounds %struct._7z_folder, %struct._7z_folder* %29, i32 0, i32 4
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** %30, align 8
  %32 = call i32 @free(%struct.TYPE_2__* %31)
  br label %33

33:                                               ; preds = %28, %1
  %34 = load %struct._7z_folder*, %struct._7z_folder** %2, align 8
  %35 = getelementptr inbounds %struct._7z_folder, %struct._7z_folder* %34, i32 0, i32 3
  %36 = load %struct.TYPE_2__*, %struct.TYPE_2__** %35, align 8
  %37 = call i32 @free(%struct.TYPE_2__* %36)
  %38 = load %struct._7z_folder*, %struct._7z_folder** %2, align 8
  %39 = getelementptr inbounds %struct._7z_folder, %struct._7z_folder* %38, i32 0, i32 2
  %40 = load %struct.TYPE_2__*, %struct.TYPE_2__** %39, align 8
  %41 = call i32 @free(%struct.TYPE_2__* %40)
  %42 = load %struct._7z_folder*, %struct._7z_folder** %2, align 8
  %43 = getelementptr inbounds %struct._7z_folder, %struct._7z_folder* %42, i32 0, i32 1
  %44 = load %struct.TYPE_2__*, %struct.TYPE_2__** %43, align 8
  %45 = call i32 @free(%struct.TYPE_2__* %44)
  ret void
}

declare dso_local i32 @free(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
